# workflow-factory-dashboard

workflow-factory-dashboard/: .env.production  .env.railway  .gitignore  .railwayignore  BUILD_SUMMARY.txt  CONTRIBUTING.md  DEPLOYMENT_QUICK_START.md  Dockerfile  LICENSE  Makefile  PROJECT_STRUCTURE.md  Procfile  QUICKSTART.md  RAILWAY_DEPLOYMENT.md  RAILWAY_DEPLOYMENT_SETUP.md  RAILWAY_QUICKSTART.md  RAILWAY_SETUP_SUMMARY.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  railway.json  railway.toml
workflow-factory-dashboard/.github/: CODEOWNERS  pull_request_template.md
workflow-factory-dashboard/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
workflow-factory-dashboard/.github/workflows/: ci.yml  railway-deploy.yml
workflow-factory-dashboard/backend/: .env.example  Dockerfile  README.md  init.sql  pyproject.toml  requirements.txt
workflow-factory-dashboard/backend/app/: __init__.py  config.py  main.py
workflow-factory-dashboard/backend/app/api/: agents.py  health.py  suggestions.py  tasks.py  workflows.py
workflow-factory-dashboard/backend/app/db/: base.py  session.py
workflow-factory-dashboard/backend/app/websockets/: manager.py
workflow-factory-dashboard/docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_README.md  ENVIRONMENT_VARIABLES.md  MOCK_DATA.md  RAILWAY_QUICK_REFERENCE.md  SCALING_AND_MONITORING.md
workflow-factory-dashboard/frontend/: .eslintrc.json  Dockerfile  Dockerfile.dev  README.md  jest.config.js  next.config.js  package.json  tailwind.config.ts  tsconfig.json
workflow-factory-dashboard/frontend/app/: globals.css  layout.tsx  page.tsx
workflow-factory-dashboard/frontend/components/dashboard/: AgentMetrics.tsx  SystemHealth.tsx  WorkflowStatus.tsx
workflow-factory-dashboard/frontend/components/shared/: Header.tsx  Sidebar.tsx
workflow-factory-dashboard/frontend/lib/hooks/: useApi.ts  useWebSocket.ts
workflow-factory-dashboard/frontend/types/: index.ts
workflow-factory-dashboard/scripts/: deploy-to-railway.sh
